--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Notable&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Barriecito&family=Notable&display=swap');
+
 .nav-bar {
   color: red;
   display: flex;
@@ -10,13 +13,47 @@
   flex-direction: column;
   background-color: aqua;
 }
-.main {
-  background-color: aquamarine;
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 h1 {
-  color: pink;
+  color: #ffd227;
+  font-family: 'Barriecito', cursive;
+  text-shadow: 3px 3px black;
+  -webkit-text-stroke: 1px black;
+  border: 2px #ff6500 solid;
+  border-radius: 15px;
+  background-color: rgb(179, 177, 177);
+  box-shadow: 3px 3px #ff6500;
 }
-.header {
-  background-color: blueviolet;
+header {
+  display: flex;
+  font-family: 'Barriecito', cursive;
+
+  justify-content: center;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+li {
+  margin: 3px;
+}
+
+img {
+  max-width: 1200px;
+  border: 2px #ff6500 solid;
+  border-radius: 15px;
+  box-shadow: 3px 3px #ff6500;
 }
